tests/spec/lex/snapshots/hex_uppercase_prefix.snap
---
source: tests/spec/lex/mod.rs
description: 0XFF
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0XFF",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
