tests/spec/lex/snapshots/hex_with_underscores.snap
---
source: tests/spec/lex/mod.rs
description: "0xFF_FF_FF_FF"
---
LexResult {
    tokens: [
        Token {
            kind: Integer,
            text: "0xFF_FF_FF_FF",
            byte_offset: 0,
            byte_length: 13,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 13,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
