tests/spec/lex/snapshots/identifier.snap
---
source: tests/spec/lex/mod.rs
description: hello
---
LexResult {
    tokens: [
        Token {
            kind: Identifier,
            text: "hello",
            byte_offset: 0,
            byte_length: 5,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 5,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
