tests/spec/lex/snapshots/identifier_r_followed_by_string_with_newline.snap
---
source: tests/spec/lex/mod.rs
description: |-
  r
  "hello"
---
LexResult {
    tokens: [
        Token {
            kind: Identifier,
            text: "r",
            byte_offset: 0,
            byte_length: 1,
        },
        Token {
            kind: Semicolon,
            text: "",
            byte_offset: 1,
            byte_length: 0,
        },
        Token {
            kind: String,
            text: "\"hello\"",
            byte_offset: 2,
            byte_length: 7,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 9,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
