tests/spec/lex/snapshots/imaginary_float.snap
---
source: tests/spec/lex/mod.rs
description: 3.14i
---
LexResult {
    tokens: [
        Token {
            kind: Imaginary,
            text: "3.14i",
            byte_offset: 0,
            byte_length: 5,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 5,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
