tests/spec/lex/snapshots/imaginary_identifier_i.snap
---
source: tests/spec/lex/mod.rs
description: i
---
LexResult {
    tokens: [
        Token {
            kind: Identifier,
            text: "i",
            byte_offset: 0,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 1,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
