tests/spec/lex/snapshots/imaginary_integer.snap
---
source: tests/spec/lex/mod.rs
description: 4i
---
LexResult {
    tokens: [
        Token {
            kind: Imaginary,
            text: "4i",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 2,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
