tests/spec/lex/snapshots/imaginary_scientific.snap
---
source: tests/spec/lex/mod.rs
description: 1e10i
---
LexResult {
    tokens: [
        Token {
            kind: Imaginary,
            text: "1e10i",
            byte_offset: 0,
            byte_length: 5,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 5,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
