tests/spec/lex/snapshots/imaginary_with_underscores.snap
---
source: tests/spec/lex/mod.rs
description: 1_000i
---
LexResult {
    tokens: [
        Token {
            kind: Imaginary,
            text: "1_000i",
            byte_offset: 0,
            byte_length: 6,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 6,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
